Fix jump to bottom bar

--- a/css/raw/black.css
+++ b/css/raw/black.css
@@ -3997,7 +3997,7 @@ div#msg_input, div.msg_input_wrapper #primary_file_button, .c-filter_input, div#
 
 .c-fullscreen_modal__header .channel_options_header span { color: #919193; }
 
-.p-downloads_list__shift_hint, ts-jumper .p-jumper__help { background: #323232; }
+.p-downloads_list__shift_hint, .p-jumper .p-jumper__help { background: #323232; }
 
 .c-fullscreen_modal__body .channel_option_item:hover { background: #484848; color: #e6e6e6; }
 
